# CBCTCardiacSegmentation

./: README.md  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
CBCTCardiacSegmentation/: CreateCBCTSegmentations.py  DemonstrateCBCTSegmentation.py  DicomHelper.py  Registration.py  __init__.py
ElastixParameterFiles/: Elastix_Translation_OpenCL.txt
tests/: test_CBCT_Segmentation.py  test_sine_wave_utilities.py
