[metadata]
name = CBCTCardiacSegmentation
version = attr: CBCTCardiacSegmentation.__version__
author = Mark Gardner
author_email = mark.gardner@sydney.edu.au
description = Segment Cardiac structures in CBCT images
long_description = file: README.md
license_files = LICENSE
long_description_content_type = text/markdown
url = https://github.sydney.edu.au/Image-X/CBCTCardiacSegmentation
project_urls =
    Bug Tracker = https://github.sydney.edu.au/Image-X/CBCTCardiacSegmentation/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = .
packages = MyPackage
python_requires = >=3.6
install_requires =
    numpy == 1.22.4

